# xpbd

./: .gitignore  activate.sh  env_mac.yml  pyproject.toml
docs/: XPBD.md
examples/: draped_cloth.py  draped_on_mesh.py  hanging_cloth.py  inflated_balloon.py  windblown.py
src/xpbd/: __init__.py  coloring.py  io.py  mesh.py  solver.py  system.py  viz.py
src/xpbd/constraints/: __init__.py  base.py  bending.py  collision.py  distance.py  volume.py
tests/: test_bending.py  test_collision.py  test_conservation.py  test_convergence.py  test_damping.py  test_determinism.py  test_distance.py  test_dt_independence.py  test_energy.py  test_force_estimate.py  test_freefall.py  test_harmonic.py  test_mesh.py  test_symmetry.py  test_volume.py
