[project]
name = "xpbd"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["setuptools>=80.0"]
build-backend = "setuptools.build_meta"